src/tests/testfiles/binary-operators/types-30.txt
Error at 5:7: Comparison operator operands need to be of same type (have int and float)
a == b;
  ^
